# rad-frontend

./: .gitignore  Dockerfile  README.md  circleci.yml  docker-compose.dist.yaml  docker-compose.yaml  jsconfig.json  package-lock.json  package.json  pyproject.toml
.circleci/: config.yaml  config.yml
.github/: pull_request_template.md
apihealth/openapi/: openapi.yaml
apihealth/src/health/api/: __init__.py  app.py  config.py  conftest.py  main.py
apihealth/src/health/api/blueprints/: authentication_route.py  status_checks_route.py
apihealth/src/health/api/domain/: __init__.py  delcarative.py  errors.py
apihealth/src/health/api/extensions/: jwt_configuration.py
apihealth/src/health/api/services/: context_manager.py
apihealth/src/health/api/services/handlers/: authentication_handler.py
apihealth/src/health/api/services/helpers/: project_util.py
apihealth/src/health/api/services/helpers/request_helpers/: extract_payload.py
apihealth/src/health/api/services/query_services/: authentication_management_queries.py
apihealth/src/health/api/services/query_services/session/: session_manager.py
apihealth/src/health/api/services/runtime_helpers/: auth_helper.py
apihealth/src/machine_learning_models/resources/: food.csv
apihealth/tests/unit/: fixtures.py  test_auth_routes.py  test_context_manager.py
db/: .dockerignore  Dockerfile
db/scripts/: migrate.sh  prototype-stub-check.sh  run-tests.sh
scripts/: build_container.sh  run-dev.sh  run-tests.sh
src/: App.jsx  index.js  theme.jsx
src/components/: Alert.jsx  Button.jsx  ChatDialog.jsx  Drawer.jsx  Header.jsx  HelpToolTip.jsx  Loading.jsx  Logo.jsx  ThemeController.jsx
src/core/: theme.js
src/helpers/: common.js
src/pages/Dashboard/: DashboardPage.jsx
src/pages/Login/: LoginPage.jsx
