[tool.poetry]
name = "flask-application"
version = "0.1.0"
description = "application for invictus backend datascience"
authors = ["Travis <16505078+TravJav@users.noreply.github.com>"]
license = "copyright"
readme = "README.md"
packages = [
    { include = "health", from = "src" },
]

[tool.black]
line-length = 100

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
psycopg2-binary = "^2.9.9"
mock = "^5.1.0"
pytest-mock = "^3.12.0"
isort = "^5.13.2"
sqlalchemy = "^2.0.25"
wrapt-timeout-decorator = "^1.4.0"
celery = "^5.3.6"
boto3 = "^1.17"
python-dotenv = "^1.0.0"
moto = "^4.2.13"
flake8 = "^7.0.0"
black = "^23.12.1"
cached-property = "^1.5.2"
pytest = "^7.4.4"

flask-jwt = "^0.3.2"
pyjwt = "^1.4.0"
requests = "^2.31.0"
botocore = "^1.34.15"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
