[tool.poetry]
name = "flask-application"
version = "0.1.0"
description = "application for datascience"
authors = ["Travis <16505078+TravJav@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flask_application"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0.1"
psycopg-binary = "^3.1.17"
mock = "^5.1.0"
pytest = "^7.4.4"
cached-property = "^1.5.2"
flask-jwt-extended = "^4.6.0"

[tool.poetry.group.dev.dependencies]
SQLAlchemy = "^2.0.25"
wrapt-timeout-decorator = "^1.4.0"
celery = "^5.3.6"
boto3 = "^1.34.15"
python-dotenv = "^1.0.0"
moto = "^4.2.13"
flake8 = "^7.0.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
